# NYCU_114S_AIC

./: .gitignore  .gitmodules  README.md
Final_Project/: .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
Final_Project/docs/: getting_started.md  isaaclab_leisaac_tutorial.md  keyboard_teleoperation.md  lerobot-model-format.md  lerobot_dataset_visualizer.md  lerobot_rollout.md  lerobot_training.md  standalone_env_config_export.md  synthetic_data_generation.md  umi_pipeline.md
Final_Project/docs/dev/: introduction.md
Final_Project/scripts/: rollout.py  teleop.py
Final_Project/scripts/datagen/: generate.py
Final_Project/tests/: test_external_task_resolver.py  test_object_poses_loader.py  test_repo_layout.py  test_rollout_wiring.py
Final_Project/tests/fixtures/external_tasks/: multi_register.py  no_register.py  single_register_no_task_id.py  valid_task.py
Final_Project/tests/smoke/: private_cup_stacking_smoke.py
Final_Project/umi_pipeline_configs/: verify_pipeline.yaml
Homeworks/: README.md
Homeworks/hw0/: README.md  load.py  requirements.txt
Homeworks/hw1/: README.md  bev2front.py  myreadme.md  report.tex
Homeworks/hw1/bev_data/: README.md
Homeworks/hw2/: load.py  myreadme.md  reconstruct.py  report.tex  tempnote
Homeworks/hw3/: README.md  main.py  map_processor.py  myreadme.md  navigator.py  report.tex  rrt.py
Homeworks/hw4/: fk.py  ik.py  report.tex
